chlorojoules: implement consistent round robin on multi-transferal